Add VCD CSI images to images.go
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/addons/csi-vmware-cloud-director/csi-node.yaml
+++ b/addons/csi-vmware-cloud-director/csi-node.yaml
@@ -47,7 +47,7 @@ spec:
       dnsPolicy: Default
       containers:
         - name: node-driver-registrar
-          image: k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.2.0
+          image: {{ .InternalImages.Get "VMwareCloudDirectorCSINodeDriverRegistrar" }}
           imagePullPolicy: "IfNotPresent"
           args:
             - "--v=5"
