--- a/test/tests.yml
+++ b/test/tests.yml
@@ -4,7 +4,7 @@
     - name: aws_amzn
     - name: aws_centos
     - name: aws_default
-      alwaysRun: true
+      runIfChanged: "(.prow/|addons/|examples/|hack/|pkg/|test/)"
     - name: aws_flatcar
     - name: aws_rhel
     - name: aws_rockylinux
@@ -29,7 +29,7 @@
     - name: aws_amzn
     - name: aws_centos
     - name: aws_default
-      alwaysRun: true
+      runIfChanged: "(.prow/|addons/|examples/|hack/|pkg/|test/)"
     - name: aws_flatcar
     - name: aws_rhel
     - name: aws_rockylinux
@@ -54,7 +54,7 @@
     - name: aws_amzn
     - name: aws_centos
     - name: aws_default
-      alwaysRun: true
+      runIfChanged: "(.prow/|addons/|examples/|hack/|pkg/|test/)"
     - name: aws_flatcar
     - name: aws_rhel
     - name: aws_rockylinux
