Add E2E tests for Kubernetes 1.26
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/test/tests.yml
+++ b/test/tests.yml
@@ -73,6 +73,31 @@
     - name: vsphere_centos
     - name: vsphere_flatcar
 
+- scenario: install_containerd
+  initVersion: v1.26.0
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+      runIfChanged: "(.prow/|addons/|examples/|hack/|pkg/|test/)"
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: gce_default
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_centos
+    - name: vsphere_flatcar
+
 - scenario: install_docker
   initVersion: v1.23.15
   infrastructures:
@@ -96,6 +121,31 @@
     - name: vsphere_default
     - name: vsphere_centos
     - name: vsphere_flatcar
+
+- scenario: upgrade_containerd
+  initVersion: v1.25.5
+  upgradedVersion: v1.26.0
+  infrastructures:
+    - name: aws_amzn_stable
+    - name: aws_centos_stable
+    - name: aws_default_stable
+    - name: aws_flatcar_stable
+    - name: aws_rhel_stable
+    - name: aws_rockylinux_stable
+    - name: azure_default_stable
+    - name: azure_centos_stable
+    - name: azure_flatcar_stable
+    - name: azure_rhel_stable
+    - name: azure_rockylinux_stable
+    - name: gce_default_stable
+    - name: openstack_default_stable
+    - name: openstack_centos_stable
+    - name: openstack_rockylinux_stable
+    - name: openstack_rhel_stable
+    - name: openstack_flatcar_stable
+    - name: vsphere_default_stable
+    - name: vsphere_centos_stable
+    - name: vsphere_flatcar_stable
 
 - scenario: upgrade_containerd
   initVersion: v1.24.9
@@ -148,7 +198,7 @@
     - name: vsphere_flatcar_stable
 
 - scenario: calico_containerd
-  initVersion: v1.25.5
+  initVersion: v1.26.0
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -196,7 +246,7 @@
     - name: vsphere_flatcar
 
 - scenario: weave_containerd
-  initVersion: v1.25.5
+  initVersion: v1.26.0
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -244,7 +294,7 @@
     - name: vsphere_flatcar
 
 - scenario: cilium_containerd
-  initVersion: v1.25.5
+  initVersion: v1.26.0
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -306,6 +356,11 @@
   infrastructures:
     - name: aws_long_timeout_default
 
+- scenario: conformance_containerd
+  initVersion: v1.26.0
+  infrastructures:
+    - name: aws_long_timeout_default
+
 - scenario: conformance_containerd_external
   initVersion: v1.23.15
   infrastructures:
@@ -318,11 +373,16 @@
 
 - scenario: conformance_containerd_external
   initVersion: v1.25.5
+  infrastructures:
+    - name: aws_long_timeout_default
+
+- scenario: conformance_containerd_external
+  initVersion: v1.26.0
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: kube_proxy_ipvs
-  initVersion: v1.25.5
+  initVersion: v1.26.0
   infrastructures:
     - name: aws_default
 
@@ -376,6 +436,30 @@
 
 - scenario: legacy_machine_controller_containerd
   initVersion: v1.25.5
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: gce_default
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_centos
+    - name: vsphere_flatcar
+
+- scenario: legacy_machine_controller_containerd
+  initVersion: v1.26.0
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -476,6 +560,24 @@
     - name: vsphere_centos
     - name: vsphere_flatcar
 
+- scenario: csi_ccm_migration
+  initVersion: v1.26.0
+  infrastructures:
+    - name: aws_default
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: vsphere_default
+    - name: vsphere_centos
+    - name: vsphere_flatcar
+
 - scenario: install_containerd_external
   initVersion: v1.23.15
   infrastructures:
@@ -544,6 +646,39 @@
 
 - scenario: install_containerd_external
   initVersion: v1.25.5
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_default
+    - name: digitalocean_centos
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_default
+    - name: equinixmetal_centos
+    - name: equinixmetal_rockylinux
+    - name: equinixmetal_flatcar
+    - name: hetzner_default
+    - name: hetzner_centos
+    - name: hetzner_rockylinux
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_centos
+    - name: vsphere_flatcar
+
+- scenario: install_containerd_external
+  initVersion: v1.26.0
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -676,6 +811,40 @@
     - name: vsphere_centos_stable
     - name: vsphere_flatcar_stable
 
+- scenario: upgrade_containerd_external
+  initVersion: v1.25.5
+  upgradedVersion: v1.26.0
+  infrastructures:
+    - name: aws_amzn_stable
+    - name: aws_centos_stable
+    - name: aws_default_stable
+    - name: aws_flatcar_stable
+    - name: aws_rhel_stable
+    - name: aws_rockylinux_stable
+    - name: azure_default_stable
+    - name: azure_centos_stable
+    - name: azure_flatcar_stable
+    - name: azure_rhel_stable
+    - name: azure_rockylinux_stable
+    - name: digitalocean_default_stable
+    - name: digitalocean_centos_stable
+    - name: digitalocean_rockylinux_stable
+    - name: equinixmetal_default_stable
+    - name: equinixmetal_centos_stable
+    - name: equinixmetal_rockylinux_stable
+    - name: equinixmetal_flatcar_stable
+    - name: hetzner_default_stable
+    - name: hetzner_centos_stable
+    - name: hetzner_rockylinux_stable
+    - name: openstack_default_stable
+    - name: openstack_centos_stable
+    - name: openstack_rockylinux_stable
+    - name: openstack_rhel_stable
+    - name: openstack_flatcar_stable
+    - name: vsphere_default_stable
+    - name: vsphere_centos_stable
+    - name: vsphere_flatcar_stable
+
 - scenario: legacy_machine_controller_containerd_external
   initVersion: v1.23.15
   infrastructures:
@@ -744,6 +913,39 @@
 
 - scenario: legacy_machine_controller_containerd_external
   initVersion: v1.25.5
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_default
+    - name: digitalocean_centos
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_default
+    - name: equinixmetal_centos
+    - name: equinixmetal_rockylinux
+    - name: equinixmetal_flatcar
+    - name: hetzner_default
+    - name: hetzner_centos
+    - name: hetzner_rockylinux
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_centos
+    - name: vsphere_flatcar
+
+- scenario: legacy_machine_controller_containerd_external
+  initVersion: v1.26.0
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
